@startuml
'https://plantuml.com/class-diagram
class Articles{
    -id:int
    -titre:string
    -contenu:text
    -createAt:datetime
    -slug:string
    -isPublie:bool
}

class Categorie{
    -id:int
    -titre:srting
    -slug:string
}

class Utilisateur{
    -id:int
    -prenom:string
    -nom:string
    -pseudo:string
}
class Commentaire{
    -id:int
    -contenu:string
    -createAt:datetime
}
class contact{
    -id : int
    -nom : string
    -prenom : string
    -email : string
    -objet : string
    -contenu : string
    -createAt : datetime
}
Articles "0..*"--"0..1"Categorie
Commentaire "0..*"--"1..1" Articles
Commentaire "0..*"--"0..1" Utilisateur

@enduml
